# LLM_Engeering_in_6_months

./: .gitignore  README.md  main.py  pyproject.toml
Bangla Mental Health Dataset V2/: README.txt  dataset.csv  dataset.parquet  dataset.toon
Week_1/: classical_ml_b.py
